@@ -1,3 +1,9 @@
+2009-04-25  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-header.c (g_mime_header_list_set_raw): Added back
+	just in case someone was foolish enough to use this API.
+	(g_mime_header_list_has_raw): Same.
+
 2009-04-24  Jeffrey Stedfast  <fejj@novell.com>
 
 	* gmime/gmime-parser.c (struct _GMimeParserPrivate): Added
